Bug 251590 - "Create Kolab Folder" does not work
Summary: "Create Kolab Folder" does not work
Status: CLOSED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: VHI critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks: 251823
  Show dependency treegraph
 
Reported: 2010-09-17 18:01 UTC by Felix Wolfsteller
Modified: 2010-10-14 12:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-17 18:01:50 UTC
When a fresh Account (i.e. without most "special" kolab folders) is added, depending on the application, the account shows up as "Kolab". Pressing "Edit" offers to "Create Kolab Folder".

To me it was not immediately clear what this means and pressing it has no effect.

Also, the "Resource folders are in account" selection (e.g. demo.kolab.org) from the same "Akonadi Resource" dialog leave a confused feeling.

Sometimes a separate account with exactly that name exist, sometimes it doesnt (had this right now in the Notes application).

Observed in 4:4.5~20100917.1176264-1maemo1.1174921 and before.
Comment 1 Felix Wolfsteller 2010-09-20 14:52:35 UTC
Maybe related to https://bugs.kde.org/show_bug.cgi?id=248446 .

Set priority to very high because I suspect many follow-up issues and weird situations (e.g. I try to register the account in KDE Tasks, which fails, which can lead to duplicate accounts in the mail component).

Is it difficult to find out if a registered kolab account has all the necessary folders and ask if they should be created if not?
Comment 2 Volker Krause 2010-09-28 15:45:38 UTC
SVN commit 1180665 by vkrause:

Implement creating default Kolab folders.

BUG: 251590


 M  +2 -0      CMakeLists.txt  
 A             kolabdefs.cpp   [License: LGPL (v2+)]
 A             kolabdefs.h   [License: LGPL (v2+)]
 A             setupdefaultfoldersjob.cpp   [License: LGPL (v2+)]
 A             setupdefaultfoldersjob.h   [License: LGPL (v2+)]
 M  +2 -1      setupkolab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180665
Comment 3 Felix Wolfsteller 2010-09-30 10:33:39 UTC
In 4:4.5~20100930.1181090-1maemo1.1180919_094336 did not observe any hang yet. Will close after more tests.
Comment 4 Felix Wolfsteller 2010-10-14 12:28:59 UTC
Less or no problems in version 4:4.5~20101014.1185599-1maemo1.1185510 .