Implement creating default Kolab folders.

BUG: 251590

svn path=/trunk/KDE/kdepim/runtime/; revision=1180665